--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -14,14 +14,14 @@
           <img class="project-arrow" src="assets/img/project-arrow.svg" alt="">
         </div>
       </div>
-      <div class="project-description">
-        <span class="project-number">
+      <div class="project-description-container">
+        <span class="project-number" [ngClass]="{'project-number-reverse': i % 2 != 0}">
           <p>0{{i + 1}}/0{{projects.length}}</p>
         </span>
         <div class="project-info">
-          <h1>{{project.title}}</h1>
-          <p>{{project.techStack.join(' | ')}}</p>
-          <p>{{project.description}}</p>
+          <h1 class="project-name">{{project.title}}</h1>
+          <p class="project-tech-stack">{{project.techStack.join(' | ')}}</p>
+          <p class="project-description">{{project.description}}</p>
           <div class="project-buttons">
             <button (click)="navigateTo(project.githubLink)">Github</button>
             <button (click)="navigateTo(project.liveTestLink)">Live-Test</button>
@@ -35,6 +35,7 @@
         </div>
       </div>
     </div>
+
 
 
 
