--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -23,6 +23,7 @@
     margin: 0;
     margin-bottom: 8px;
   }
+  
   p {
     font-family: "Overpass";
     font-style: normal;
@@ -38,6 +39,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
   .project {
     display: flex;
     justify-content: space-between;
@@ -46,31 +48,55 @@
     margin-top: 16px;
     margin-bottom: 16px;
     background-color: rgb(75, 150, 75);
+
     .project-image {
       width: 50%;
       height: 100%;
       background-color: rgb(75, 75, 150);
     }
-    .project-description {
+    .project-description-container {
       width: 50%;
       height: 100%;
       background-color: rgb(150, 75, 75);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
       .project-number {
         width: 100%;
         height: 30%;
         background-color: rgb(75, 150, 150);
+
         p {
           text-align: end;
           margin: 0;
+          font-family: "Overpass";
+          font-style: normal;
+          font-weight: 600;
+          font-size: 48px;
         }
       }
+      .project-number-reverse {
+        width: 100%;
+        height: 30%;
+        background-color: rgb(75, 150, 150);
+
+        p {
+          text-align: start;
+          margin: 0;
+          font-family: "Overpass";
+          font-style: normal;
+          font-weight: 600;
+          font-size: 48px;
+        }
+      }
+
       .project-info {
         width: 100%;
         height: 70%;
         background-color: rgb(150, 150, 75);
+
+        .project-name {}
       }
     }
   }
