--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -18,13 +18,13 @@
         <span class="project-number" [ngClass]="{'project-number-reverse': i % 2 != 0}">
           <p>0{{i + 1}}/0{{projects.length}}</p>
         </span>
-        <div class="project-info">
-          <h1 class="project-name">{{project.title}}</h1>
-          <p class="project-tech-stack">{{project.techStack.join(' | ')}}</p>
-          <p class="project-description">{{project.description}}</p>
-          <div class="project-buttons">
+        <div class="project-info" [ngClass]="{'project-info-reverse': i % 2 != 0}">
+          <h1 class="project-name" [ngClass]="{'project-name-reverse': i % 2 != 0}">{{project.title}}</h1>
+          <p class="project-tech-stack" [ngClass]="{'project-tech-stack-reverse': i % 2 != 0}">{{project.techStack.join(' | ')}}</p>
+          <p class="project-description" [ngClass]="{'project-description-reverse': i % 2 != 0}">{{project.description}}</p>
+          <div class="project-buttons" [ngClass]="{'project-buttons-reverse': i % 2 != 0}">
             <button (click)="navigateTo(project.githubLink)">Github</button>
-            <button (click)="navigateTo(project.liveTestLink)">Live-Test</button>
+            <button (click)="navigateTo(project.liveTestLink)">Live</button>
           </div>
         </div>
       </div>
