--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -23,7 +23,7 @@
     margin: 0;
     margin-bottom: 8px;
   }
-  
+
   p {
     font-family: "Overpass";
     font-style: normal;
@@ -96,7 +96,112 @@
         height: 70%;
         background-color: rgb(150, 150, 75);
 
-        .project-name {}
+        .project-name {
+          padding-left: 32px;
+          margin-bottom: 12px;
+          font-family: "Syne";
+          font-style: normal;
+          font-weight: 800;
+          font-size: 45px;
+        }
+
+        .project-tech-stack {
+          padding-left: 32px;
+          margin-top: 0;
+          margin-bottom: 12px;
+          font-family: "Overpass";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 23px;
+          color: #5988ff;
+        }
+
+        .project-description {
+          padding-left: 32px;
+          font-family: "Overpass";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+        }
+      }
+
+      .project-info-reverse {
+        width: 100%;
+        height: 70%;
+        background-color: rgb(150, 150, 75);
+
+        .project-name-reverse {
+          padding-left: 0;
+          padding-right: 32px;
+          margin-bottom: 12px;
+          font-family: "Syne";
+          font-style: normal;
+          font-weight: 800;
+          font-size: 45px;
+        }
+
+        .project-tech-stack-reverse {
+          padding-left: 0;
+          padding-right: 32px;
+          margin-top: 0;
+          margin-bottom: 12px;
+          font-family: "Overpass";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 23px;
+          color: #5988ff;
+        }
+
+        .project-description-reverse {
+          padding-left: 0;
+          padding-right: 32px;
+          font-family: "Overpass";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+        }
+      }
+
+      .project-buttons {
+        padding-left: 32px;
+        button {
+          width: 140px;
+          height: 58px;
+          border: 4px solid #000;
+          background-color: #fffcf3;
+          padding: 10px 30px;
+          margin-top: 16px;
+          margin-right: 16px;
+          font-size: 21px;
+          font-family: "Overpass";
+          cursor: pointer;
+          transition: ease-in-out 100ms;
+          &:hover {
+            width: 180px;
+            font-weight: 600;
+          }
+        }
+      }
+
+      .project-buttons-reverse {
+        padding-left: 0;
+        button {
+          width: 140px;
+          height: 58px;
+          border: 4px solid #000;
+          background-color: #fffcf3;
+          padding: 10px 30px;
+          margin-top: 16px;
+          margin-right: 16px;
+          font-size: 21px;
+          font-family: "Overpass";
+          cursor: pointer;
+          transition: ease-in-out 100ms;
+          &:hover {
+            width: 180px;
+            font-weight: 600;
+          }
+        }
       }
     }
   }
