--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -45,10 +45,9 @@
   .project {
     display: flex;
     justify-content: space-between;
-    height: 460px;
+    height: 380px;
     width: 100%;
-    margin-bottom: 130px;
-
+    margin-bottom: 160px;
 
     .project-image-container {
       width: 50%;
@@ -57,6 +56,7 @@
       justify-content: center;
       align-items: flex-start;
       position: relative;
+      z-index: 1;
 
       .project-image {
         width: 570px;
@@ -68,15 +68,20 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        width: 566px;
-        height: 329px;
-        border: 4px solid black;
-        left: 40px;
-        top: 81px;
+        width: 562px;
+        height: 372px;
+        border: 4px solid transparent;
+        left: 24px;
+        top: 0px;
+        transition: border-color 150ms ease-in-out, top 150ms ease-in-out, left 150ms ease-in-out;
 
         .project-arrow {
           position: absolute;
-          right: -42px;
+          right: -41px;
+          transform: rotate(135deg); //Soll 0 sein
+          opacity: 0;
+          transition: opacity 150ms ease-in-out 150ms, transform 150ms ease-in-out 300ms;
+          transition-delay: 0s, 0s;
         }
       }
 
@@ -85,19 +90,22 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        width: 566px;
-        height: 329px;
-        border: 4px solid black;
-        left: 4px;
-        top: 81px;
+        width: 562px;
+        height: 372px;
+        border: 4px solid transparent;
+        left: 25px;
+        top: 0px;
+        transition: border-color 150ms ease-in-out, top 150ms ease-in-out, left 150ms ease-in-out;
 
         .project-arrow-reverse {
           position: absolute;
-          left: -42px;
-          transform: scaleX(-1);
+          left: -40px;
+          transform: rotate(135deg); // Soll 270 sein
+          opacity: 0;
+          transition: opacity 150ms ease-in-out 150ms, transform 150ms ease-in-out 150ms;
+          transition-delay: 0s, 0s;
         }
       }
-
     }
     .project-description-container {
       width: 50%;
@@ -108,7 +116,7 @@
 
       .project-number {
         width: 100%;
-        height: 20%;
+        height: 13%;
 
         p {
           text-align: end;
@@ -121,7 +129,7 @@
       }
       .project-number-reverse {
         width: 100%;
-        height: 20%;
+        height: 13%;
 
         p {
           text-align: start;
@@ -135,7 +143,10 @@
 
       .project-info {
         width: 100%;
-        height: 80%;
+        height: 87%;
+        opacity: 0;
+        transform: translateX(-100%);
+        transition: opacity 250ms ease-in-out 150ms, transform 250ms ease-in-out 150ms;
 
         .project-name {
           padding-left: 100px;
@@ -169,7 +180,10 @@
 
       .project-info-reverse {
         width: 100%;
-        height: 80%;
+        height: 87%;
+        opacity: 0;
+        transform: translateX(100%);
+        transition: opacity 250ms ease-in-out 150ms, transform 250ms ease-in-out 150ms;
 
         .project-name-reverse {
           padding-left: 0;
@@ -249,4 +263,39 @@
       }
     }
   }
+}
+
+.project:hover .project-border {
+  border-color: #000 !important;
+  left: 48px !important;
+  top: 24px !important;
+}
+
+.project:hover .project-border-reverse {
+  border-color: #000 !important;
+  left: 1px !important;
+  top: 24px !important;
+}
+
+.project:hover .project-arrow-reverse {
+  opacity: 1 !important;
+  transform: rotate(270deg) !important;
+  transition-delay: 50ms, 150ms !important;
+}
+
+
+.project:hover .project-arrow {
+  opacity: 1 !important;
+  transform: rotate(0deg) !important;
+  transition-delay: 50ms, 150ms !important;
+}
+
+.project:hover .project-info-reverse {
+  opacity: 1 !important;
+  transform: translateX(0) !important;
+}
+
+.project:hover .project-info {
+  opacity: 1 !important;
+  transform: translateX(0) !important;
 }
