--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -117,6 +117,7 @@
       .project-number {
         width: 100%;
         height: 13%;
+        transition: 150ms ease-in-out;
 
         p {
           text-align: end;
@@ -130,6 +131,7 @@
       .project-number-reverse {
         width: 100%;
         height: 13%;
+        transition: 150ms ease-in-out;
 
         p {
           text-align: start;
@@ -150,7 +152,7 @@
 
         .project-name {
           padding-left: 100px;
-          margin-bottom: 12px;
+          margin-bottom: 20px;
           font-family: "Syne";
           font-style: normal;
           font-weight: 800;
@@ -188,7 +190,7 @@
         .project-name-reverse {
           padding-left: 0;
           padding-right: 32px;
-          margin-bottom: 12px;
+          margin-bottom: 20px;
           font-family: "Syne";
           font-style: normal;
           font-weight: 800;
@@ -298,4 +300,8 @@
 .project:hover .project-info {
   opacity: 1 !important;
   transform: translateX(0) !important;
+}
+
+.project:hover .project-number {
+  color: #5988ff;
 }
